# ncnn_mobilenetssd_demo

./: .gitignore  CMakeLists.txt  build.sh  ssdmobilenet.cpp
